Styling the page with responsive design

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="font-teko">
+  <div id="root" class="max-w-5xl"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
