--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="font-teko">
-  <div id="root" class="max-w-5xl"></div>
+  <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
