--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body class="font-teko">
+  <div id="modal"></div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
